Fixed z-index of Drop overlay

--- a/src/components/Chat/Chat.module.css
+++ b/src/components/Chat/Chat.module.css
@@ -1,4 +1,5 @@
 .Chat {
+  z-index: 500;
   position: absolute;
   margin-left: auto;
   margin-right: auto;
