--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -1,7 +1,7 @@
 .Navigation {
   position: fixed;
   top: 20px;
-  z-index: 100;
+  z-index: 200;
   text-align: center;
 }
 
